--- a/style.css
+++ b/style.css
@@ -16,10 +16,14 @@ body {
 }
 
 #quizApp {
-  background-color: #fff;
+  background: #fff;
   padding: 20px;
   width: 700px;
   box-shadow: 0px 0px 10px 0px #000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
@@ -40,8 +44,8 @@ body {
   height: auto;
 }
 
-.title__text {
-  font-size: 40px;
+h1 {
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
@@ -56,23 +60,24 @@ body {
 
 #options {
   margin: 20px 0;
+  width: 100%;
 }
 
 .option {
   display: block;
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #4682b4;
+  background: #4682b4;
   color: #fff;
   border: none;
   cursor: pointer;
   width: 100%;
-  font-size: 20px;
+  font-size: 1.3rem;
   font-weight: 600;
 }
 
 .option:not(:disabled):hover {
-  background-color: #396a93;
+  background: #396a93;
 }
 
 .option:disabled {
@@ -85,8 +90,17 @@ body {
 
 .reset {
   text-align: center;
-  font-weight: 700;
+  font-size: 1.1rem;
+  font-weight: bold;
   color: #4682b4;
-  margin-top: 32px;
+  margin: 2rem auto 0 auto;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 5px 14px;
+}
+
+.reset:disabled {
+  cursor: not-allowed;
 }
