--- a/style.css
+++ b/style.css
@@ -88,12 +88,11 @@ h1 {
   text-align: center;
 }
 
-.reset {
+.reset, .next-question {
   text-align: center;
   font-size: 1.1rem;
   font-weight: bold;
   color: #4682b4;
-  margin: 2rem auto 0 auto;
   cursor: pointer;
   background-color: transparent;
   border: none;
@@ -101,6 +100,12 @@ h1 {
   padding: 5px 14px;
 }
 
-.reset:disabled {
+.reset:disabled,
+.next-question:disabled {
   cursor: not-allowed;
+}
+
+.next-question {
+  margin-top: 0.8rem;
+  margin-bottom: 1.3rem;
 }
